<resources>
    <string name="app_name">Task 1</string>
    <string name="text_for_anagram">Text for anagram</string>
    <string name="enter_text_for_anagram">Enter text for anagram</string>
    <string name="task_1">Task 1</string>
    <string name="here_must_be_your_anagram">Here must be your anagram</string>
    <string name="enter_symbols_to_ignore">Enter symbols to ignore</string>
    <string name="textview">TextView</string>
    <string name="convert">Convert</string>

</resources>
