<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/myToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tool_bar_corners"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/task_1"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/myToolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/myToolbar" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myToolbar"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="56dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayotForAnagram"
                android:layout_width="403dp"
                android:layout_height="120dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/enter_text_for_anagram"
                android:textColorHint="#8D8D8D"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:hintTextColor="#8D8D8D"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextForAnagram"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:gravity="clip_vertical|center_horizontal"
                    android:inputType="text"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filterInputlayot"
                android:layout_width="403dp"
                android:layout_height="120dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:textColorHint="#8D8D8D"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:hintTextColor="#8D8D8D"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayotForAnagram">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/filterInputText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:gravity="clip_vertical|center_horizontal"
                    android:hint="@string/enter_symbols_to_ignore"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/preViewOfAnagram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/here_must_be_your_anagram"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/filterInputlayot" />

            <TextView
                android:id="@+id/myAnagram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="32dp"
                android:text="@string/textview"
                android:textColor="#ffaa00"
                android:textSize="20sp"
                android:textStyle="normal"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/filterInputlayot" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
